--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/veganwaffles.html">Vegan Pumpkin Waffles</a>
+        <ul>
+          <li><a href="recipes/veganwaffles.html">Vegan Pumpkin Waffles</a></li>
+          <li><a href="recipes/veganfudge.html">Vegan Brownies</a></li>   
+        </ul>
     </body>
 </html>
