Add pancake recipe page and link to it on index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <h1>Odin Recipes</h1>
         <ul>
           <li><a href="recipes/veganwaffles.html">Vegan Pumpkin Waffles</a></li>
-          <li><a href="recipes/veganfudge.html">Vegan Brownies</a></li>   
+          <li><a href="recipes/veganfudge.html">Vegan Brownies</a></li>  
+          <li><a href="recipes/pankcake.html">Vegan Pancakes</a></li> 
         </ul>
     </body>
 </html>
