add css style to pages

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Recipes Homepage</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 id="hptitle">Odin Recipes</h1>
         <ul>
-          <li><a href="recipes/veganwaffles.html">Vegan Pumpkin Waffles</a></li>
-          <li><a href="recipes/veganfudge.html">Vegan Brownies</a></li>  
-          <li><a href="recipes/pankcake.html">Vegan Pancakes</a></li> 
+          <li class="first"><a href="recipes/veganwaffles.html">Vegan Pumpkin Waffles</a></li>
+          <li class="second"><a href="recipes/veganfudge.html">Vegan Brownies</a></li>  
+          <li class="third"><a href="recipes/pankcake.html">Vegan Pancakes</a></li> 
         </ul>
     </body>
 </html>
