--- a/recipes/pankcake.html
+++ b/recipes/pankcake.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Vegan Pancakes</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Vegan Pancakes</h1>
+        <h1 class="p-title">Vegan Pancakes</h1>
         <img src="../img/pancake.jpg" alt="Pancakes with butter and maple syrup on 
         a white plate">
-        <h3>6 Ingredient Vegan Pancakes</h3>
+        <h3 class="d-title">6 Ingredient Vegan Pancakes</h3>
         <p>Delicious and simple vegan pancakes that the entire family will love!</p>
-        <h3>Ingredients</h3>
-        <ul>
+        <h3 class="i-title">Ingredients</h3>
+        <ul class="ingred">
             <li>1 1/4 cups all-purpose flour</li>
             <li>2 tablespoons white sugar</li>
             <li>2 teaspoons baking powder</li>
@@ -19,8 +20,8 @@
             <li>1 1/4 cups water</li>
             <li>1 tablespoon oil</li>
         </ul>
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="s-title">Steps</h3>
+        <ol class="step">
             <li>Sift flour, sugar, baking powder, and salt into a large bowl; 
                 make a well in the center. Whisk together water and oil 
                 in a small bowl; pour into flour mixture. Stir just until 
