--- a/recipes/veganwaffles.html
+++ b/recipes/veganwaffles.html
@@ -2,18 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <title>Vegan Waffle Recipe</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Vegan Pumpkin Waffles</h1>
+        <h1 class="w-title">Vegan Pumpkin Waffles</h1>
         <img src="../img/waffle.jpg" alt="Vegan pumpkin waffles with butter">
-        <h3>Quick, easy and delicious vegan pumpkin waffles</h3>
+        <h3 class="d-title">Quick, easy and delicious vegan pumpkin waffles</h3>
         <p>Everyone will love these delicious and simple pumpkin waffles so much that 
             they won't even know they're vegan! </p>
         <p>These waffles are made with ingredients such as pumpkin puree, your favorite
              plant milk, and nutmeg. Top with your favorite choice of toppings like syrup,
             powdered sugar, or fruit! </p>
-        <h3>ingredients</h3>
-        <ul>
+        <h3 class="i-title">ingredients</h3>
+        <ul class="ingred">
             <li>1 cup almond milk</li>
             <li>1/2 cup pumpkin puree</li>
             <li>2 tablespoons white sugar</li>
@@ -26,8 +28,8 @@
             <li>1/4 teaspoon baking soda</li>
             <li>1 pinch ground nutmeg</li>
         </ul>
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="s-title">Steps</h3>
+        <ol class="step">
             <li>Combine almond milk, pumpkin puree, sugar, oil, and vanilla extract in a 
                 bowl. Add flour, pumpkin pie spice, baking powder, salt, baking soda, and
                  nutmeg. Stir until well combined.
