--- a/recipes/veganfudge.html
+++ b/recipes/veganfudge.html
@@ -2,21 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>vegan fudge recipe</title>
+        <title>Vegan fudge recipe</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Vegan Fudge</h1>
+        <h1 class="f-title">Vegan Fudge</h1>
         <img src="../img/fudge.jpg" alt="Picture of vegan fudge on a plate">
-        <h3>Vegan fudge made with few ingredients</h3>
+        <h3 class="d-title">Vegan fudge made with few ingredients</h3>
         <p>A vegan fudge recipe that everyone will love and is easy to make!</p>
-        <h3>Ingredients</h3>
-        <ul>
+        <h3 class="i-title">Ingredients</h3>
+        <ul class="ingred">
             <li>10 ounces of vegan semisweet chocolate chips</li>
             <li>1 can sweetened condensed coconut milk</li>
             <li>1/4 cup coconut oil</li>
         </ul>
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="s-title">Steps</h3>
+        <ol class="step">
             <li>Grease an 8 inch square glass baking dish with coconut oil.</li>
             <li>combine chocolate chips, sweetened condensed coconut milk, and 1/4 
                 cup coconut oil in a saucepan. Let sit over low heat, stirring only 
